Possible fix for menu on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -262,3 +262,31 @@ span.devider {
     background-color: $brand-color;
     border-color: $brand-color;
 }
+
+//.offcanvas-header{ display:none; }
+//
+//@media (max-width: 992px) {
+// .offcanvas-header{ display:block; }
+// .navbar-collapse {
+//   position: fixed;
+//   top:0; 
+//   bottom: 0;
+//   left: 100%;
+//   width: 100%;
+//   height: 100%;
+//   padding-right: 1rem;
+//   padding-left: 1rem;
+//   overflow-y: auto;
+//   visibility: hidden;
+//   background-color: black;
+//   transition: visibility .2s ease-in-out, -webkit-transform .2s ease-in-out;
+// }
+// .navbar-collapse.show {
+//   visibility: visible;
+//   transform: translateX(-100%);
+// }
+//}
+header {
+    max-height: 100vh;
+    overflow: auto;
+}
